force-app/main/default/objects/NBA_Impact_Weight__mdt/NBA_Impact_Weight__mdt.object-meta.xml
<CustomObject>
    <description>Defines scoring weights for the NBA V2 impact calculation. Single active config record controls MRR vs Close Probability balance and Impact vs Urgency balance.</description>
    <label>NBA Impact Weight</label>
    <pluralLabel>NBA Impact Weights</pluralLabel>
</CustomObject>