force-app/main/default/objects/NBA_Impact_Weight__mdt/fields/Close_Probability_Weight__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability_Weight__c</fullName>
    <description>Weight applied to close probability score in impact calculation (0.00-1.00). Must sum to 1.00 with MRR_Weight.</description>
    <label>Close Probability Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>