force-app/main/default/objects/NBA_Impact_Weight__mdt/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>Configuration name (e.g., Default_V2). Only one record should be active at a time.</description>
    <label>Config Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>