force-app/main/default/objects/NBA_Impact_Weight__mdt/fields/Impact_vs_Urgency_Impact_Weight__c.field-meta.xml
<CustomField>
    <fullName>Impact_vs_Urgency_Impact_Weight__c</fullName>
    <description>Weight for Impact in the final score formula: (Impact_Weight × Impact) + (Urgency_Weight × Urgency). Must sum to 1.00 with Urgency weight.</description>
    <label>Impact vs Urgency - Impact Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>