force-app/main/default/objects/NBA_Impact_Weight__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this configuration is active. Only one configuration should be active at a time.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>