force-app/main/default/objects/NBA_Impact_Weight__mdt/fields/MRR_Weight__c.field-meta.xml
<CustomField>
    <fullName>MRR_Weight__c</fullName>
    <description>Weight applied to MRR score in impact calculation (0.00-1.00). Must sum to 1.00 with Close_Probability_Weight.</description>
    <label>MRR Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>